--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -10,7 +10,6 @@ set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.20.241.102;
 set_real_ip_from 103.208.86.5;
-set_real_ip_from 103.245.231.77;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.28.52.93;
@@ -105,7 +104,6 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 119.28.139.55;
@@ -151,7 +149,6 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.53.58.161;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.129.68.162;
-set_real_ip_from 161.97.156.152;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
@@ -199,6 +196,7 @@ set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.148.133;
@@ -641,7 +639,6 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
-set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
@@ -764,7 +761,6 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:7826::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -919,7 +915,6 @@ set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.151.8.8;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
@@ -983,7 +978,6 @@ set_real_ip_from 2600:3c07::f03c:95ff:fe1e:22e;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe1e:2a6;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:69ed::1;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
@@ -1003,7 +997,6 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
-set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1556,6 +1549,54 @@ set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
+set_real_ip_from 2a10:1fc0:10::19eb:717b;
+set_real_ip_from 2a10:1fc0:10::28fc:90d4;
+set_real_ip_from 2a10:1fc0:10::2a17:5b54;
+set_real_ip_from 2a10:1fc0:10::2cf4:6ba2;
+set_real_ip_from 2a10:1fc0:10::2d91:1a2d;
+set_real_ip_from 2a10:1fc0:10::3903:457;
+set_real_ip_from 2a10:1fc0:10::3919:de17;
+set_real_ip_from 2a10:1fc0:10::3a1:5e9f;
+set_real_ip_from 2a10:1fc0:10::3dc5:e694;
+set_real_ip_from 2a10:1fc0:10::3eb3:d1d0;
+set_real_ip_from 2a10:1fc0:10::3ec1:2b1e;
+set_real_ip_from 2a10:1fc0:10::40d8:83c;
+set_real_ip_from 2a10:1fc0:10::42d2:f78b;
+set_real_ip_from 2a10:1fc0:10::5138:4dfa;
+set_real_ip_from 2a10:1fc0:10::5719:261d;
+set_real_ip_from 2a10:1fc0:10::61d9:7617;
+set_real_ip_from 2a10:1fc0:10::61e2:c84d;
+set_real_ip_from 2a10:1fc0:10::627f:3c31;
+set_real_ip_from 2a10:1fc0:10::694a:c359;
+set_real_ip_from 2a10:1fc0:10::6b4c:30fc;
+set_real_ip_from 2a10:1fc0:10::6c2e:469a;
+set_real_ip_from 2a10:1fc0:10::6d92:d6ab;
+set_real_ip_from 2a10:1fc0:10::6fde:4b8d;
+set_real_ip_from 2a10:1fc0:10::792f:38b4;
+set_real_ip_from 2a10:1fc0:10::895d:abf9;
+set_real_ip_from 2a10:1fc0:10::8a03:d023;
+set_real_ip_from 2a10:1fc0:10::8b78:d42e;
+set_real_ip_from 2a10:1fc0:10::8d4d:eca2;
+set_real_ip_from 2a10:1fc0:10::9a73:d4f2;
+set_real_ip_from 2a10:1fc0:10::9d80:c9f7;
+set_real_ip_from 2a10:1fc0:10::9e08:e765;
+set_real_ip_from 2a10:1fc0:10::a3a5:49da;
+set_real_ip_from 2a10:1fc0:10::a458:8b37;
+set_real_ip_from 2a10:1fc0:10::a63c:724c;
+set_real_ip_from 2a10:1fc0:10::b571:1205;
+set_real_ip_from 2a10:1fc0:10::bf3f:d195;
+set_real_ip_from 2a10:1fc0:10::c129:61a1;
+set_real_ip_from 2a10:1fc0:10::c385:c7fa;
+set_real_ip_from 2a10:1fc0:10::c7c7:2f84;
+set_real_ip_from 2a10:1fc0:10::d5a6:a292;
+set_real_ip_from 2a10:1fc0:10::d5d0:db30;
+set_real_ip_from 2a10:1fc0:10::d6b7:b3e9;
+set_real_ip_from 2a10:1fc0:10::dbe0:6173;
+set_real_ip_from 2a10:1fc0:10::dbe9:7852;
+set_real_ip_from 2a10:1fc0:10::e4c8:9020;
+set_real_ip_from 2a10:1fc0:10::ea87:5496;
+set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
+set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:1467::;
@@ -1778,6 +1819,7 @@ set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
+set_real_ip_from 46.249.49.183;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.30.188.218;
 set_real_ip_from 46.38.243.210;
@@ -1878,6 +1920,30 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
+set_real_ip_from 85.239.55.11;
+set_real_ip_from 85.239.55.110;
+set_real_ip_from 85.239.55.112;
+set_real_ip_from 85.239.55.114;
+set_real_ip_from 85.239.55.123;
+set_real_ip_from 85.239.55.132;
+set_real_ip_from 85.239.55.168;
+set_real_ip_from 85.239.55.173;
+set_real_ip_from 85.239.55.174;
+set_real_ip_from 85.239.55.184;
+set_real_ip_from 85.239.55.189;
+set_real_ip_from 85.239.55.192;
+set_real_ip_from 85.239.55.201;
+set_real_ip_from 85.239.55.228;
+set_real_ip_from 85.239.55.230;
+set_real_ip_from 85.239.55.239;
+set_real_ip_from 85.239.55.24;
+set_real_ip_from 85.239.55.249;
+set_real_ip_from 85.239.55.25;
+set_real_ip_from 85.239.55.250;
+set_real_ip_from 85.239.55.31;
+set_real_ip_from 85.239.55.37;
+set_real_ip_from 85.239.55.51;
+set_real_ip_from 85.239.55.80;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
@@ -1918,6 +1984,30 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
+set_real_ip_from 91.227.77.107;
+set_real_ip_from 91.227.77.108;
+set_real_ip_from 91.227.77.119;
+set_real_ip_from 91.227.77.125;
+set_real_ip_from 91.227.77.139;
+set_real_ip_from 91.227.77.158;
+set_real_ip_from 91.227.77.160;
+set_real_ip_from 91.227.77.181;
+set_real_ip_from 91.227.77.193;
+set_real_ip_from 91.227.77.200;
+set_real_ip_from 91.227.77.208;
+set_real_ip_from 91.227.77.209;
+set_real_ip_from 91.227.77.226;
+set_real_ip_from 91.227.77.229;
+set_real_ip_from 91.227.77.237;
+set_real_ip_from 91.227.77.25;
+set_real_ip_from 91.227.77.31;
+set_real_ip_from 91.227.77.36;
+set_real_ip_from 91.227.77.44;
+set_real_ip_from 91.227.77.48;
+set_real_ip_from 91.227.77.51;
+set_real_ip_from 91.227.77.54;
+set_real_ip_from 91.227.77.62;
+set_real_ip_from 91.227.77.97;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
