--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -915,6 +915,7 @@ deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
 deny 23.151.8.8;
+deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -978,6 +979,7 @@ deny 2600:3c07::f03c:95ff:fe1e:22e;
 deny 2600:3c0a::f03c:95ff:fe1e:2a6;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:69ed::1;
 deny 2602:f6f6:2:ad5c::1;
@@ -1253,7 +1255,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1510,6 +1511,7 @@ deny 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 deny 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
+deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
@@ -1834,7 +1836,6 @@ deny 5.181.80.107;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
-deny 5.255.100.26;
 deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
