--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -26,7 +26,6 @@ set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.140;
 set_real_ip_from 104.244.75.74;
-set_real_ip_from 104.244.76.237;
 set_real_ip_from 104.244.77.208;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.232;
@@ -150,7 +149,6 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.53.58.161;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.129.68.162;
-set_real_ip_from 161.97.156.152;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
@@ -642,6 +640,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
@@ -1002,6 +1001,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1025,7 +1025,6 @@ set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
 set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
-set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
@@ -1179,6 +1178,7 @@ set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
+set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1516,6 +1516,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1954,6 +1955,7 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
@@ -2019,6 +2021,7 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.158.156;
 set_real_ip_from 93.185.165.211;
+set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
