--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -26,6 +26,7 @@ set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.140;
 set_real_ip_from 104.244.75.74;
+set_real_ip_from 104.244.76.237;
 set_real_ip_from 104.244.77.208;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.232;
@@ -110,6 +111,7 @@ set_real_ip_from 119.28.139.55;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 124.198.131.108;
+set_real_ip_from 124.198.131.136;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 125.253.56.119;
 set_real_ip_from 128.127.180.156;
@@ -122,7 +124,6 @@ set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.175.8.45;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
-set_real_ip_from 138.68.144.236;
 set_real_ip_from 139.162.90.140;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
@@ -132,7 +133,6 @@ set_real_ip_from 142.44.133.81;
 set_real_ip_from 144.126.133.74;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
-set_real_ip_from 146.70.146.26;
 set_real_ip_from 146.70.164.214;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 148.113.152.91;
@@ -167,8 +167,6 @@ set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
-set_real_ip_from 166.88.225.109;
-set_real_ip_from 166.88.225.48;
 set_real_ip_from 171.25.193.131;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
@@ -640,7 +638,6 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
-set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
@@ -1001,7 +998,6 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
-set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1025,6 +1021,7 @@ set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
 set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
+set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
@@ -1893,6 +1890,8 @@ set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.246.98.159;
+set_real_ip_from 77.48.28.204;
+set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.91.75.25;
